# Indivdual-Project

./: deliverables - Shortcut.lnk  working doc.docx  working doc.docx - Shortcut.lnk  ~$rking doc.docx  ~WRL2784.tmp
C_implementation/pi_code/CamRunTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
C_implementation/pi_code/CamRunTest/src/: ImgMtx.cpp  ImgMtx.h  ImgMtx.hpp  boundingBoxStructs.h  boxFilter.cpp  filterStages.h  imageSpeedCalcs.cpp  imageSpeedCalcs.hpp  teststdImg.cpp
C_implementation/pi_code/motion_detection/: CMakeLists.txt  main.cpp
C_implementation/pi_code/motion_detection/src/: ImgMtx.cpp  boxFilter.hpp  imageSpeedCalcs.cpp  imageSpeedCalcs.hpp  motionDetectFuncs.cpp  motionDetectFuncs.hpp
C_implementation/pi_code/velocity_testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
C_implementation/pi_code/velocity_testing/10ms images/1867mm/: incidentStats.txt
C_implementation/pi_code/velocity_testing/10ms images/2193.6mm/: incidentStats.txt
C_implementation/pi_code/velocity_testing/10ms images/2356.9mm/: incidentStats.txt
C_implementation/pi_code/velocity_testing/10ms images/2683.5mm/: incidentStats.txt
C_implementation/pi_code/velocity_testing/10ms images/2846.8mm/: incidentStats.txt
C_implementation/pi_code/velocity_testing/src/: GPIOPort.hpp  ImgMtx.cpp  atomicFIFO.cpp  boundingBoxStructs.h  camChain.cpp  camChain.hpp  imageSpeedCalcs.cpp  imageSpeedCalcs.hpp  motionDetectFuncs.cpp  pauseCtrl.cpp
C_implementation/pi_code/velocity_testing/testdir/: incidentStats.txt
(+127 files in other folders)
